--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
+# Firebase Configuration
 FIREBASE_PROJECT_ID=
 FIREBASE_STORAGE_BUCKET=
 FIREBASE_API_KEY=
@@ -13,6 +14,7 @@ VITE_FIREBASE_PROJECT_ID=
 VITE_FIREBASE_STORAGE_BUCKET=
 VITE_FIREBASE_MESSAGING_SENDER_ID=
 VITE_FIREBASE_APP_ID=
+VITE_FIREBASE_MEASUREMENT_ID=
 
 API_SECRET_KEY=
 CORS_ORIGINS=
