--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1",
-    "firebase": "^10.7.1",
-    "react-firebase-hooks": "^5.1.1"
+    "lucide-react": "^0.263.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
