--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -120,8 +120,8 @@ jobs:
         cd backend
         pytest tests/integration/ -v || true
 
-  build-and-push-ghcr:
-    name: Build & Push to GHCR
+  build-and-push-backend:
+    name: Build & Push Backend to GHCR
     needs: [integration-test]
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
     runs-on: ubuntu-latest
@@ -148,13 +148,13 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ env.GHCR_IMAGE }}
+        images: ${{ env.GHCR_IMAGE }}-backend
         tags: |
           type=raw,value=latest,enable={{is_default_branch}}
           type=sha,prefix=
           type=ref,event=branch
     
-    - name: Build and Push Docker image to GHCR
+    - name: Build and Push Backend Docker image
       uses: docker/build-push-action@v5
       with:
         context: ./backend
@@ -168,5 +168,56 @@ jobs:
     
     - name: Output image info
       run: |
-        echo "✅ Successfully built and pushed to GHCR:"
+        echo "✅ Successfully built and pushed Backend to GHCR:"
+        echo "${{ steps.meta.outputs.tags }}"
+
+  build-and-push-frontend:
+    name: Build & Push Frontend to GHCR
+    needs: [integration-test]
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master')
+    runs-on: ubuntu-latest
+    
+    permissions:
+      contents: read
+      packages: write
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Log in to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.GHCR_IMAGE }}-frontend
+        tags: |
+          type=raw,value=latest,enable={{is_default_branch}}
+          type=sha,prefix=
+          type=ref,event=branch
+    
+    - name: Build and Push Frontend Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: ./frontend
+        file: ./frontend/Dockerfile
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        platforms: linux/amd64
+    
+    - name: Output image info
+      run: |
+        echo "✅ Successfully built and pushed Frontend to GHCR:"
         echo "${{ steps.meta.outputs.tags }}"
