--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,14 +14,14 @@ services:
       - resumehack-net
 
   frontend:
-    build: ./frontend
+    image: ghcr.io/khangpt2k6/acm_resumehack-frontend:latest
     expose:
       - "3000"
     networks:
       - resumehack-net
 
   backend:
-    build: ./backend
+    image: ghcr.io/khangpt2k6/acm_resumehack-backend:latest
     expose:
       - "8000"
     networks:
